Use the correct title
Updated the Modelon logo size

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: 3rd Japanese Modelica Conference
+title: The Asian Modelica Conference
 logo: proceedings/html/static/images/ConferenceLogo.png
