--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: The Asian Modelica Conference
-logo: proceedings/html/static/images/ConferenceLogo.png
+logo: proceedings/html/static/images/ConferenceLogo_2.jpg
